<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/vault_outline"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="@dimen/login_margin_16dp"
        android:background="#00ffffff"
        android:scaleType="centerInside"
        android:src="@drawable/keeper_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBackground" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_marginTop="@dimen/login_margin_32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_32dp"
        android:text="@string/email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/etEnterEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />


    <EditText
        android:id="@+id/etEnterEmailAddress"
        style="@style/etEnterMasterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_16dp"
        android:layout_marginTop="@dimen/login_margin_16dp"
        android:layout_marginRight="@dimen/login_margin_16dp"
        android:background="@drawable/shape_master_password"
        android:hint="@string/enter_email_address"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/edit_text_color_cursor_gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvMasterPassWord"
        android:layout_marginTop="@dimen/login_margin_32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/etEnterMasterPassword"
        app:layout_constraintTop_toBottomOf="@+id/etEnterEmailAddress" />

    <EditText
        android:id="@+id/etEnterMasterPassword"
        style="@style/etEnterMasterPassword"
        android:hint="@string/enter_master_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_16dp"
        android:layout_marginRight="@dimen/login_margin_16dp"
        android:layout_marginTop="@dimen/login_margin_16dp"
        android:background="@drawable/shape_master_password"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/edit_text_color_cursor_gold"
        app:layout_constraintTop_toBottomOf="@+id/tvMasterPassWord"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_16dp"
        android:layout_marginRight="@dimen/login_margin_16dp"
        android:layout_marginTop="@dimen/login_margin_16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnterMasterPassword" />

    <TextView
        android:id="@+id/tvCreateAccount"
        style="@style/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_32dp"
        android:layout_marginRight="@dimen/login_margin_8dp"
        android:text="@string/dont_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/tvDoNotHaveAccount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivBackground"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvDoNotHaveAccount"
        style="@style/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_32dp"
        android:text="@string/create"
        app:layout_constraintEnd_toStartOf="@+id/ivBackground"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvNeedHelp"
        style="@style/tvNeedHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_32dp"
        android:text="@string/need_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

    <Button
        android:id="@+id/btnUseSsoLogin"
        style="@style/btnLogin"
        android:textColor="@color/gold"
        android:background="@drawable/btn_sso"
        android:text="@string/use_enterprise_sso_login"
        android:layout_marginLeft="@dimen/login_margin_16dp"
        android:layout_marginRight="@dimen/login_margin_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvNeedHelp" />

    <TextView
        android:id="@+id/tvCopyRight"
        style="@style/tvCopyRightFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_margin_16dp"
        android:text="@string/copy_right"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>